@@ -1,5 +1,10 @@
 # $Id$
 
+2009-03-06	Vladlen Y. Koshelev
+
+	* core/Form/Primitives/PrimitiveIdentifier.class.php: actualImportValue()
+	hook added.
+
 2009-03-05	Vladlen Y. Koshelev
 
 	* main/Flow/BaseEditor.class.php: ability to change default action added.
